[MENFORCER-494] Allow banning dynamic versions in whole tree (#294)
* [MENFORCER-494] Allow banning dynamic versions in whole tree

This commit introduces the possibility of banning dynamic versions
in the entire dependency tree before Maven computes the final
dependency tree.

* Fix format

---------

Co-authored-by: Slawomir Jaranowski <s.jaranowski@gmail.com>